--- a/style.css
+++ b/style.css
@@ -74,13 +74,16 @@ input {
 .container {
     left: 443px;
     bottom: 30px;
+    width: fit-content;
 }
 
 svg {
     position: absolute;
     z-index: 5;
-    top: 8px;
-    left: 8px;
+    top: 13px;
+    left: 13px;
+    width: 38px;
+    height: 38px;
 }
 
 .btn {
