--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ input:hover {
 
 }
 
-@media (min-width:600px) {
+@media screen  and (min-width:600px) and (max-width:800px) {
 
     .calc {
         width: 80%;
